--- a/style.css
+++ b/style.css
@@ -1,2 +1,10 @@
-div{text-align:center;}
-.myCanvas{border:1px solid #d3d3d3;width:200px;height:100px;}
+div{
+	text-align:center;
+}
+
+.myCanvas{
+	border:1px solid #d3d3d3;
+	width:300px;
+	height:200px;
+
+}
